syntax = "proto3";

package telepresence.manager;

option go_package = "github.com/telepresenceio/telepresence/rpc/v2/manager";

// I went ahead and duplicated things from other protobuf files here, so that
// the two teams can heckle over it without us worrying about the rest
// of Telepresence.

// Calls from System A to the manager need not be authenticated
// because they are happening over a connection created by the manager
// calling "SystemA.ReverseConnection"; all authentication happened by
// the manager authenticating to System A.
service ManagerProxy {
  // The first argument chunk must be an "intercept_id"; after that no
  // chunk may be an intercept_id.  System A calls this when it
  // recieves a connection to "XYZ.preview.edgestack.me", and that
  // domain belongs to an intercept that belongs to this manager.
  rpc HandleConnection(stream ConnectionChunk) returns (stream ConnectionChunk);
}

message ConnectionChunk {
  oneof value {
    string intercept_id = 1;
    bytes  data = 2;
    string error = 3; // TODO: Probably have a better error type
  }
}
